Tue Nov 19 23:10:01 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (INCFLAGS): Add libcruft/misc directory.

Thu Nov 14 00:07:31 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave.el (octave-text-functions): Change set and show to
	gset and gshow.

	* Makeconf.in (TEXI2DVI): Define to be our own private version.

	* texi2dvi: New file.
	* octMakefile.in (DISTFILES): Add it to the list.

	* configure.in: Don't substitute values in src/mk-oct-links.in.

	* emacs/octave.el: Update to version 0.8.6, from Kurt Hornik.

	* configure.in (RLD_FLAG): Surround case pattern in changequote.

	* Version 1.92.

Wed Nov 13 11:04:26 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Don't set or substitute LIBINFO.
	(infofile): Set and substitute a default value.

	* Makeconf.in (do-subst-default-values): Substitute it here.

	* configure.in: If running on an SCO system, define SCO, and force
	HAVE_ISINF and HAVE_ISNAN to be defined.
	Also check for ieeefp.h and nan.h.
	* acconfig.h (HAVE_ISINF, HAVE_ISNAN, SCO): Add undefs.

Tue Nov 12 21:50:49 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* MAKEINFO.PATCH: Update to use patch relative to texinfo-3.9.

	* INFO.PATCH: New file.
	* octMakefile.in (DISTFILES): Add it.

	* info: Update to current release from texinfo-3.9.

Mon Nov 11 23:56:58 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* config.h.bot: Only check value of __GNUC__ and __GNUC_MINOR__ if
	__GNUC__ is defined.

Fri Nov  8 11:15:07 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (version): Look in $(TOPDIR)/src then
	$(srcdir)/$(TOPDIR)/src for version.h.

	* configure.in (TERMLIBS): Print warning message if no term
	library is found.
	(CXXLIB_LIST, CXXLIB_PATH, FLIB_LIST, FLIB_PATH): Delete.
	* Makeconf.in (CXXLIB_LIST, CXXLIB_PATH, FLIB_LIST, FLIB_PATH):
	Delete.
	(do-subst-default-vals): Delete CXXLIB_LIST, CXXLIB_PATH,
	FLIB_LIST, and FLIB_PATH from the list.
