@@ -1,3 +1,9 @@
+Wed Nov 20 00:33:03 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* aclocal.m4 (OCTAVE_STRUCT_GR_PASSWD): New macro.
+	* configure.in: Use it.
+	* acconfig.h (HAVE_GR_PASSWD): Add undef.
+
 Tue Nov 19 23:10:01 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* Makeconf.in (INCFLAGS): Add libcruft/misc directory.
